About Us & Blog Detail

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;800&family=Raleway:wght@300;400;500;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
 
     <!-- Style -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="dist/css/main.css" />
-    
+    <link rel="stylesheet" href="dist/css/index.css" />
+
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/61528eba73.js" crossorigin="anonymous"></script>
   </head>
@@ -32,7 +31,7 @@
   <body>
     <div id="fullPage">
       <div class="img-container">
-        <img src="img/bg-img.png" alt="bg-img.png" class="img-main" />
+        <img  draggable="false" src="img/bg-img.png" alt="bg-img.png" class="img-main" />
       </div>
       <section class="vertical-scrolling s1">
         <!-- Start Navbar -->
@@ -64,7 +63,7 @@
           <p class="lead col-9 mx-auto">Our strength lies in our ability to help clients solving their financial needs and grabbing investment opportunity.</p>
           <div class="btn-scroll col-1 mx-auto">
             <a href="#whatwedo">
-              <img src="./img/btn-arrow-down.png" alt="arrow" />
+              <img  draggable="false" src="./img/btn-arrow-down.png" alt="arrow" />
             </a>
           </div>
         </div>
@@ -81,7 +80,7 @@
           </div>
           <div class="col-6 col-md-4 p-0">
             <div class="card card-2" onmouseover="hideTitle(2)" onmouseout="showTitle(2)">
-              <img src="./img/img-cfa.png" alt="cfa" />
+              <img  draggable="false" src="./img/img-cfa.png" alt="cfa" />
               <div class="card-img-overlay d-flex align-items-end">
                 <h5 class="card-title card-title2">
                   Corporate <br />
@@ -98,7 +97,7 @@
           </div>
           <div class="col-6 col-md-4 p-0">
             <div class="card card-3" onmouseover="hideTitle(3)" onmouseout="showTitle(3)">
-              <img src="./img/img-crfm.png" alt="crfm" />
+              <img  draggable="false" src="./img/img-crfm.png" alt="crfm" />
               <div class="card-img-overlay d-flex align-items-end">
                 <h5 class="card-title card-title3">
                   Capital Rising <br />
@@ -112,7 +111,7 @@
           </div>
           <div class="col-6 col-md-4 p-0">
             <div class="card card-4" onmouseover="hideTitle(4)" onmouseout="showTitle(4)">
-              <img src="./img/img-nme.png" alt="nme" />
+              <img  draggable="false" src="./img/img-nme.png" alt="nme" />
               <div class="card-img-overlay d-flex align-items-end">
                 <h5 class="card-title card-title4">
                   New Market <br />
@@ -129,7 +128,7 @@
           </div>
           <div class="col-6 col-md-4 p-0">
             <div class="card card-5" onmouseover="hideTitle(5)" onmouseout="showTitle(5)">
-              <img src="./img/img-cdt.png" alt="cdt" />
+              <img  draggable="false" src="./img/img-cdt.png" alt="cdt" />
               <div class="card-img-overlay d-flex align-items-end">
                 <h5 class="card-title card-title5">
                   Commercial <br />
@@ -146,7 +145,7 @@
           </div>
           <div class="col-6 col-md-4 p-0">
             <div class="card card-6" onmouseover="hideTitle(6)" onmouseout="showTitle(6)">
-              <img src="./img/img-svb.png" alt="svb" />
+              <img  draggable="false" src="./img/img-svb.png" alt="svb" />
               <div class="card-img-overlay d-flex align-items-end">
                 <h5 class="card-title card-title6">
                   Start-up <br />
@@ -169,7 +168,7 @@
       <section class="vertical-scrolling s3 container-fluid">
         <div class="row d-flex justify-content-center align-items-center">
           <div class="col-12 d-flex justify-content-center align-items-center p-0">
-            <img src="./img/img-header-why-back.png" alt="whyback" class="img-back" />
+            <img  draggable="false" src="./img/img-header-why-back.png" alt="whyback" class="img-back" />
             <span class="header">Why Us</span>
           </div>
           <div class="col-11 col-sm-10 col-md-8 ml-2 mt-5">
@@ -244,37 +243,37 @@
       <section class="vertical-scrolling s4 container-fluid">
         <div class="row d-flex justify-content-center">
           <div class="col-12 d-flex justify-content-center align-items-center p-0">
-            <img src="./img/img-header-prev-back.png" alt="prevback" class="img-back" />
+            <img  draggable="false" src="./img/img-header-prev-back.png" alt="prevback" class="img-back" />
             <span class="header">Previous Client</span>
           </div>
           <div class="col-10 mt-5">
             <div class="row row-cols-3 row-cols-md-5 d-flex justify-content-center">
               <div class="col d-flex justify-content-center align-items-center">
-                <img src="img/img-client-angkasa.png" alt="angkasa" class="img-fluid" />
+                <img  draggable="false" src="img/img-client-angkasa.png" alt="angkasa" class="img-fluid" />
               </div>
               <div class="col d-flex justify-content-center align-items-center">
-                <img src="img/img-satria.png" alt="satria" class="img-fluid" />
+                <img  draggable="false" src="img/img-satria.png" alt="satria" class="img-fluid" />
               </div>
               <div class="col d-flex justify-content-center align-items-center">
-                <img src="img/img-client-pnm.png" alt="pnm" class="img-fluid" />
+                <img  draggable="false" src="img/img-client-pnm.png" alt="pnm" class="img-fluid" />
               </div>
               <div class="col d-flex justify-content-center align-items-center">
-                <img src="img/img-client-pln.png" alt="pln" class="img-fluid" />
+                <img  draggable="false" src="img/img-client-pln.png" alt="pln" class="img-fluid" />
               </div>
               <div class="col d-flex justify-content-center align-items-center">
-                <img src="img/img-client-ojk.png" alt="ojk" class="img-fluid" />
+                <img  draggable="false" src="img/img-client-ojk.png" alt="ojk" class="img-fluid" />
               </div>
               <div class="col d-flex justify-content-center align-items-center">
-                <img src="img/img-client-mega.png" alt="mega" class="img-fluid" />
+                <img  draggable="false" src="img/img-client-mega.png" alt="mega" class="img-fluid" />
               </div>
               <div class="col d-flex justify-content-center align-items-center">
-                <img src="img/img-client-pertamina.png" alt="pertamina" class="img-fluid" />
+                <img  draggable="false" src="img/img-client-pertamina.png" alt="pertamina" class="img-fluid" />
               </div>
               <div class="col d-flex justify-content-center align-items-center">
-                <img src="img/img-client-aero.png" alt="aero" class="img-fluid" />
+                <img  draggable="false" src="img/img-client-aero.png" alt="aero" class="img-fluid" />
               </div>
               <div class="col d-flex justify-content-center align-items-center">
-                <img src="img/img-client-idx.png" alt="idx" class="img-fluid" />
+                <img  draggable="false" src="img/img-client-idx.png" alt="idx" class="img-fluid" />
               </div>
             </div>
             <div class="row mt-5 d-flex justify-content-center align-items-center">
@@ -282,10 +281,10 @@
                 <span>Official Partner :</span>
               </div>
               <div class="col-3 col-md-2 d-flex justify-content-center align-items-center">
-                <img src="img/img-client-g20.png" alt="g20" class="img-fluid" />
+                <img  draggable="false" src="img/img-client-g20.png" alt="g20" class="img-fluid" />
               </div>
               <div class="col-3 col-md-2 d-flex justify-content-center align-items-center">
-                <img src="img/img-client-wbaf.png" alt="wbaf" class="img-fluid" />
+                <img  draggable="false" src="img/img-client-wbaf.png" alt="wbaf" class="img-fluid" />
               </div>
             </div>
           </div>
@@ -297,14 +296,14 @@
       <section class="vertical-scrolling s5 container-fluid">
         <div class="row d-flex justify-content-center">
           <div class="col-12 d-flex justify-content-center align-items-center p-0">
-            <img src="./img/img-header-financial-back.png" alt="finback" class="img-back" />
+            <img  draggable="false" src="./img/img-header-financial-back.png" alt="finback" class="img-back" />
             <span class="header">Financial Insight</span>
           </div>
           <div class="col-12 mt-5 no-desktop overlay">
-            <div class="main-article">
+            <div id="grab" class="main-article">
               <article>
                   <div class="image mr-sm-4">
-                    <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                    <a href="blog-detail.html"><img  draggable="false" src="img/img-blog-big.png" /></a>
                   </div>
                   <div class="text">
                       <a href="blog-detail.html"><h2 class="blog-title">IPO Karya Bersama Anugerah</h2></a>
@@ -317,7 +316,7 @@
               </article>
               <article>
                   <div class="image mr-sm-4">
-                    <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                    <a href="blog-detail.html"><img  draggable="false" src="img/img-blog-big.png" /></a>
                   </div>
                   <div class="text">
                         <a href="blog-detail.html"><h2 class="blog-title">IPO Karya Bersama Anugerah</h2></a>
@@ -330,7 +329,7 @@
               </article>
               <article>
                   <div class="image mr-sm-4">
-                    <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                    <a href="blog-detail.html"><img  draggable="false" src="img/img-blog-big.png" /></a>
                   </div>
                   <div class="text">
                       <a href="blog-detail.html"><h2 class="blog-title">IPO Karya Bersama Anugerah</h2></a>
@@ -343,7 +342,7 @@
               </article>
               <article>
                   <div class="image mr-sm-4">
-                    <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                    <a href="blog-detail.html"><img  draggable="false" src="img/img-blog-big.png" /></a>
                   </div>
                   <div class="text">
                         <a href="blog-detail.html"><h2 class="blog-title">IPO Karya Bersama Anugerah</h2></a>
@@ -355,7 +354,7 @@
                   </div>
               </article>
               <div class="d-flex justify-content-center align-items-center mx-auto mb-5">
-                <button class="btn-view-more" onclick="goto_blog()"><span class="fi-view-more">view more</span></button>
+                <button class="btn-view-more mb-5" onclick="goto_blog()"><span class="fi-view-more">view more</span></button>
               </div>
             </div>
           </div>
@@ -405,12 +404,12 @@
       <!-- END FINANCIAL INSIGHT SECTION -->
 
       <!-- START FOOTER SECTION -->
-      <section class="vertical-scrolling fp-auto-height s6">
+      <section class="vertical-scrolling fp-auto-height footer">
         <div class="container">
           <div class="row pt-4">
             <div class="col-12 mb-4">
               <div class="logo">
-                <img src="img/img-logo.png" alt="img-logo" class="img-fluid img-logo" />
+                <img  draggable="false" src="img/img-logo.png" alt="img-logo" class="img-fluid img-logo" />
               </div>
             </div>
           </div>
@@ -494,26 +493,10 @@
       <!-- END FOOTER SECTION -->
     </div>
 
-    <!-- FULL PAGE JS -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.7/fullpage.min.js"
-      integrity="sha512-MLy5YE5Hiyow/qhqZAsO91PjjWUBngedTSWTdvSbEPjFienlVY6SJ8Uy7eLHkudkv3kTJ7NFHZ9s0JD/UwpHdA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <!-- JAVASCRIPT -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.7/fullpage.min.js" integrity="sha512-MLy5YE5Hiyow/qhqZAsO91PjjWUBngedTSWTdvSbEPjFienlVY6SJ8Uy7eLHkudkv3kTJ7NFHZ9s0JD/UwpHdA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-    -->
 
     <script>
       new fullpage("#fullPage", {
@@ -566,6 +549,50 @@
       function goto_blog() {
         location.href = "blog.html";
       }
+
+      document.addEventListener('DOMContentLoaded', function () {
+                const ele = document.getElementById('grab');
+                ele.style.cursor = 'grab';
+
+                let pos = { top: 0, left: 0, x: 0, y: 0 };
+
+                const mouseDownHandler = function (e) {
+                    ele.style.cursor = 'grabbing';
+                    ele.style.userSelect = 'none';
+
+                    pos = {
+                        left: ele.scrollLeft,
+                        top: ele.scrollTop,
+                        // Get the current mouse position
+                        x: e.clientX,
+                        y: e.clientY,
+                    };
+
+                    document.addEventListener('mousemove', mouseMoveHandler);
+                    document.addEventListener('mouseup', mouseUpHandler);
+                };
+
+                const mouseMoveHandler = function (e) {
+                    // How far the mouse has been moved
+                    const dx = e.clientX - pos.x;
+                    const dy = e.clientY - pos.y;
+
+                    // Scroll the element
+                    ele.scrollTop = pos.top - dy;
+                    ele.scrollLeft = pos.left - dx;
+                };
+
+                const mouseUpHandler = function () {
+                    ele.style.cursor = 'grab';
+                    ele.style.removeProperty('user-select');
+
+                    document.removeEventListener('mousemove', mouseMoveHandler);
+                    document.removeEventListener('mouseup', mouseUpHandler);
+                };
+
+                // Attach the handler
+                ele.addEventListener('mousedown', mouseDownHandler);
+            });
     </script>
   </body>
 </html>
