--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img  draggable="false" src="img/bg-img.png" alt="bg-img.png" class="img-main" />
       </div>
       <section class="vertical-scrolling s1">
-        <!-- Start Navbar -->
+        <!-- START NAVBAR -->
         <nav class="navbar navbar-expand-lg navbar-light shadow-5-strong">
           <a class="navbar-brand" href="/">FathCapital</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,14 +57,25 @@
             </ul>
           </div>
         </nav>
-        <!-- End Navbar -->
+        <!-- END NAVBAR -->
+
         <div class="container mb-5">
-          <h1 class="display-4 col-12 mx-auto">WE DELIVER SOUND & SPECIALIZE SERVICE</h1>
-          <p class="lead col-9 mx-auto">Our strength lies in our ability to help clients solving their financial needs and grabbing investment opportunity.</p>
-          <div class="btn-scroll col-1 mx-auto">
-            <a href="#whatwedo">
-              <img  draggable="false" src="./img/btn-arrow-down.png" alt="arrow" />
-            </a>
+          <div class="row">
+            <div class="col-12 col-sm-8 col-lg-10 mx-auto">
+              <h1 class="display-4">WE DELIVER SOUND & SPECIALIZE SERVICE</h1>
+            </div>
+            <div class="col-10 mx-auto">
+              <p class="lead">
+                Our strength lies in our ability to help clients solving their financial needs and grabbing investment opportunity.
+              </p>
+            </div>
+            <div class="col-10 mx-auto">
+              <div class="btn-scroll">
+                <a href="#whatwedo">
+                  <img  draggable="false" src="./img/btn-arrow-down.png" alt="arrow" />
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -88,10 +99,12 @@
                 </h5>
               </div>
               <div class="card-text">
-                <h3>
-                  Provide financial advisory to <span class="font-weight-bold">maximize corporate valuation</span> as well as <span class="font-weight-bold">financial audit</span> and
-                  <span class="font-weight-bold">restructuring, due diligence for private investment</span> and <span class="font-weight-bold">IPO/ICO preparation</span>.
-                </h3>
+                <div class="text d-flex align-items-center">
+                  <h3>
+                    Provide financial advisory to <span class="font-weight-bold">maximize corporate valuation</span> as well as <span class="font-weight-bold">financial audit</span> and
+                    <span class="font-weight-bold">restructuring, due diligence for private investment</span> and <span class="font-weight-bold">IPO/ICO preparation</span>.
+                  </h3>
+                </div>
               </div>
             </div>
           </div>
@@ -105,7 +118,11 @@
                 </h5>
               </div>
               <div class="card-text">
-                <h3><span class="font-weight-bold">Bridging, project financing, hedge funds, equities and bonds, money markets, private equities and property</span> with a wide range of traditional and alternative.</h3>
+                <div class="text d-flex align-items-center">
+                  <h3>
+                    <span class="font-weight-bold">Bridging, project financing, hedge funds, equities and bonds, money markets, private equities and property</span> with a wide range of traditional and alternative.
+                  </h3>
+                </div>
               </div>
             </div>
           </div>
@@ -119,10 +136,12 @@
                 </h5>
               </div>
               <div class="card-text">
-                <h3>
-                  Provide financial advisory to <span class="font-weight-bold">maximize corporate valuation</span> as well as <span class="font-weight-bold">financial audit</span> and
-                  <span class="font-weight-bold">restructuring, due diligence for private investment</span> and <span class="font-weight-bold">IPO/ICO preparation</span>.
-                </h3>
+                <div class="text d-flex align-items-center">
+                  <h3>
+                    Provide financial advisory to <span class="font-weight-bold">maximize corporate valuation</span> as well as <span class="font-weight-bold">financial audit</span> and
+                    <span class="font-weight-bold">restructuring, due diligence for private investment</span> and <span class="font-weight-bold">IPO/ICO preparation</span>.
+                  </h3>
+                </div>
               </div>
             </div>
           </div>
@@ -136,10 +155,11 @@
                 </h5>
               </div>
               <div class="card-text">
-                <h3>
-                  Assist diverge corporate actions and commercial deals
-                  <span class="font-weight-bold">such shares stock arrangements, investment/divestment options, merger and acquisition, also deal forensic and dispute investigation</span>.
-                </h3>
+                <div class="text d-flex align-items-center">
+                  <h3>
+                    Assist diverge corporate actions and commercial deals <span class="font-weight-bold">such shares stock arrangements, investment/divestment options, merger and acquisition, also deal forensic and dispute investigation</span>.
+                  </h3>
+                </div>
               </div>
             </div>
           </div>
@@ -153,10 +173,12 @@
                 </h5>
               </div>
               <div class="card-text">
-                <h3>
-                  Provide seed funding, raising growth capital, <span class="font-weight-bold">advance startup business ideas, strengthen the team foundation, and connect and scale up</span> ventures growth to the industrial scale
-                  acceptance and series A/B progression until the IPO stage.
-                </h3>
+                <div class="text d-flex align-items-center">
+                  <h3>
+                    Provide seed funding, raising growth capital, <span class="font-weight-bold">advance startup business ideas, strengthen the team foundation, and connect and scale up</span> ventures growth to the industrial scale
+                    acceptance and series A/B progression until the IPO stage.
+                  </h3>
+                </div>
               </div>
             </div>
           </div>
