--- a/blog.html
+++ b/blog.html
@@ -113,7 +113,7 @@
     <section class="blog-content">
       <div class="container mt-5">
         <div class="row mb-5">
-          <div class="col-12 col-xl-4 mb-5">
+          <div class="col-12 col-lg-6 col-xl-4 mb-5">
             <div class="card">
               <a class="thumbnail" href="blog-detail.html"><img class="img-fluid" src="img/img-blog-big.png" /></a>
               <div class="text">
@@ -130,7 +130,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-xl-4 mb-5">
+          <div class="col-12 col-lg-6 col-xl-4 mb-5">
             <div class="card">
               <a class="thumbnail" href="blog-detail.html"><img class="img-fluid" src="img/img-blog-big.png" /></a>
               <div class="text">
@@ -147,7 +147,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-xl-4 mb-5">
+          <div class="col-12 col-lg-6 col-xl-4 mb-5">
             <div class="card">
               <a class="thumbnail" href="blog-detail.html"><img class="img-fluid" src="img/img-blog-big.png" /></a>
               <div class="text">
@@ -164,7 +164,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-xl-4 mb-5">
+          <div class="col-12 col-lg-6 col-xl-4 mb-5">
             <div class="card">
               <a class="thumbnail" href="blog-detail.html"><img class="img-fluid" src="img/img-blog-big.png" /></a>
               <div class="text">
@@ -181,7 +181,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-xl-4 mb-5">
+          <div class="col-12 col-lg-6 col-xl-4 mb-5">
             <div class="card">
               <a class="thumbnail" href="blog-detail.html"><img class="img-fluid" src="img/img-blog-big.png" /></a>
               <div class="text">
@@ -198,7 +198,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-xl-4 mb-5">
+          <div class="col-12 col-lg-6 col-xl-4 mb-5">
             <div class="card">
               <a class="thumbnail" href="blog-detail.html"><img class="img-fluid" src="img/img-blog-big.png" /></a>
               <div class="text">
