--- a/contact.html
+++ b/contact.html
@@ -14,51 +14,39 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&family=Raleway:wght@300;400;500;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
 
     <!-- Style -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/blog.css" />
-    <link rel="stylesheet" href="css/tablet-blog.css" />
-    <link rel="stylesheet" href="css/desktop-blog.css" />
-    <link rel="stylesheet" href="css/blog-nextpage.css" />
-    <link rel="stylesheet" href="css/tablet-blog-nextpage.css" />
-    <link rel="stylesheet" href="css/desktop-blog-nextpage.css" />
-    <link rel="stylesheet" href="css/blog-detail.css" />
-    <link rel="stylesheet" href="css/tablet-blog-detail.css" />
-    <link rel="stylesheet" href="css/desktop-blog-detail.css" />
-    <link rel="stylesheet" href="css/about-us.css" />
-    <link rel="stylesheet" href="css/tablet-about-us.css" />
-    <link rel="stylesheet" href="css/desktop-about-us.css" />
     <link rel="stylesheet" href="css/contact.css" />
-    <link rel="stylesheet" href="css/tablet-contact.css" />
     <link rel="stylesheet" href="css/desktop-contact.css" />
+    <link rel="stylesheet" href="dist/css/contact.css" />
+
   </head>
   <body>
-    <div class="container-fluid">
-      <img src="img/bg-contact-crop.png" alt="bg-contact.png" class="img-main-contact" />
+    <div class="container-fluid img-main-contact">
+      <img src="img/bg-contact-crop.png" alt="bg-contact-crop.png"/>
     </div>
-    <section class="s1-blog-detail">
-      <!-- Start Navbar -->
-      <nav class="navbar navbar-expand navbar-dark shadow-5-strong">
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about-us.html">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </section>
+    <!-- START NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong">
+      <a class="navbar-brand" href="/">FathCapital</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blog.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="about-us.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- END NAVBAR -->
 
     <!-- START WHAT WE DO SECTION -->
     <section class="s2-blog-detail">
@@ -117,41 +105,89 @@
     </section>
     <!-- END WHAT WE DO SECTION -->
 
+
     <!-- START FOOTER SECTION -->
-    <section class="s6">
+    <section class="footer mt-5">
       <div class="container">
-        <div class="row mt-2">
-          <div class="col-12 mt-5">
-            <img src="img/img-logo.png" alt="img-logo" class="img-fluid img-logo" />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-foot col-12 col-md-4 col-lg-4 d-flex justify-content-center">
-            <div class="fo-div-title">
-              <span class="fo-title">Jakarta Office :</span><br /><span class="fo-sub-title">Indonesia Stock Exchange Tower 2, 17th Floor Jl. Jend. Sudirman Kav. 52-53, Jakarta 12190, Indonesia</span><br />
-              <br /><span class="fo-title">Singapore Office :</span><br /><span class="fo-sub-title"
-                >Singapore Land Tower 37th Floor 50 Raffles Place <br />
-                Singapore 048623</span
-              >
+        <div class="row pt-4">
+          <div class="col-12 mb-4">
+            <div class="logo">
+              <img src="img/img-logo.png" alt="img-logo" class="img-fluid img-logo" />
             </div>
           </div>
-          <div class="col-foot col-contact col-12 col-md-4 col-lg-4 d-flex justify-content-center">
-            <div class="fo-div-title">
-              <span class="fo-title">Plaza Simatupang</span><br /><span class="fo-sub-title">TB. Simatupang KAV IS No.1 Jakarta 12310, Indonesia</span><br /><br />
-              <div class="fo-title-contact">
-                <span class="fo-title">Contact</span><br /><span class="fo-sub-title"
-                  >Email: info@fathcapital.com <br />
-                  Tel: +6221 5157613
-                </span>
+        </div>
+        <div class="row pb-4">
+          <div class="col-lg-9">
+            <div class="row">
+              <div class="col-12 col-md-6 mb-4">
+                <div class="fo-card">
+                  <div class="fo-div-title">
+                    <p class="fo-title">Jakarta Office :</p>
+                    <p class="fo-sub-title">Indonesia Stock Exchange Tower 2, 17th Floor <br>Jl. Jend. Sudirman Kav. 52-53, <br>Jakarta 12190</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 mb-4">
+                <div class="fo-card">
+                  <div class="fo-div-title">
+                    <p class="fo-title">Jakarta Office 2 :</p>
+                    <p class="fo-sub-title">Plaza Simatupang <br>TB. Simatupang KAV IS No. 1 <br>Jakarta 12310, Indonesia</p>
+                  </div>    
+                </div>
+              </div>
+              <div class="col-12 col-md-6 mb-4">
+                <div class="fo-card">
+                  <div class="fo-div-title">
+                    <p class="fo-title">Singapore Office :</p>
+                    <p class="fo-sub-title">Singapore Land Tower, 37th Floor <br>50 Raffles Place <br>Singapore 048623</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 mb-4">
+                <div class="fo-card">
+                  <div class="fo-div-title">
+                    <p class="fo-title">Our Contact</p>
+                    <p class="fo-sub-title">Email: info@fathcapital.com <br>Tel: +6221 5157613</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-foot col-social col-12 col-md-4 col-lg-4 d-flex justify-content-start">
-            <div class="fo-div-title">
-              <span class="fo-title">Follow Us on Social Media</span><br />
-              <div class="div-ig"><img src="img/img-social-ig.png" alt="ig" class="img-social" /><span class="fo-social">@fath_capital</span></div>
-              <div class="div-fb"><img src="img/img-social-fb.png" alt="ig" class="img-social" /><span class="fo-social">@fath_capital</span></div>
-              <div class="div-linkedin"><img src="img/img-social-linkedin.png" alt="ig" class="img-social" /><span class="fo-social">@fath_capital</span></div>
+          <div class="col-lg-3">
+            <div class="row">
+              <div class="col-12 mb-2">
+                <div class="fo-card">
+                  <div class="fo-div-title">
+                    <span class="fo-title">Follow Us on Social Media</span>
+                    <div class="fo-social">
+                      <a href="#">
+                        <div class="img-social">
+                          <svg class="svg-social" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                            <path fill="rgb(72, 160, 230)" d="M224,202.66A53.34,53.34,0,1,0,277.36,256,53.38,53.38,0,0,0,224,202.66Zm124.71-41a54,54,0,0,0-30.41-30.41c-21-8.29-71-6.43-94.3-6.43s-73.25-1.93-94.31,6.43a54,54,0,0,0-30.41,30.41c-8.28,21-6.43,71.05-6.43,94.33S91,329.26,99.32,350.33a54,54,0,0,0,30.41,30.41c21,8.29,71,6.43,94.31,6.43s73.24,1.93,94.3-6.43a54,54,0,0,0,30.41-30.41c8.35-21,6.43-71.05,6.43-94.33S357.1,182.74,348.75,161.67ZM224,338a82,82,0,1,1,82-82A81.9,81.9,0,0,1,224,338Zm85.38-148.3a19.14,19.14,0,1,1,19.13-19.14A19.1,19.1,0,0,1,309.42,189.74ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32ZM382.88,322c-1.29,25.63-7.14,48.34-25.85,67s-41.4,24.63-67,25.85c-26.41,1.49-105.59,1.49-132,0-25.63-1.29-48.26-7.15-67-25.85s-24.63-41.42-25.85-67c-1.49-26.42-1.49-105.61,0-132,1.29-25.63,7.07-48.34,25.85-67s41.47-24.56,67-25.78c26.41-1.49,105.59-1.49,132,0,25.63,1.29,48.33,7.15,67,25.85s24.63,41.42,25.85,67.05C384.37,216.44,384.37,295.56,382.88,322Z"/>
+                          </svg>
+                        </div>
+                        Instagram
+                      </a>
+                      <a href="#">
+                        <div class="img-social">
+                          <svg class="svg-social" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                            <path fill="rgb(72, 160, 230)" d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"/>
+                          </svg>
+                        </div>
+                        Facebook
+                      </a>
+                      <a href="#">
+                        <div class="img-social">
+                          <svg class="svg-social" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                            <path fill="rgb(72, 160, 230)" d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"/>
+                          </svg>
+                        </div>
+                        Twitter
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -159,19 +195,8 @@
     </section>
     <!-- END FOOTER SECTION -->
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <!-- JAVASCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-    -->
-
-    <script></script>
   </body>
 </html>
